--- a/package.json
+++ b/package.json
@@ -4,12 +4,23 @@
   "private": true,
   "dependencies": {
     "-": "0.0.1",
+    "@emotion/react": "^11.7.1",
+    "@emotion/styled": "^11.6.0",
+    "@material-ui/core": "^4.12.3",
+    "@mui/material": "^5.4.1",
+    "@mui/styled-engine-sc": "^5.4.1",
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
+    "bootstrap": "^5.1.3",
     "components": "^0.1.0",
     "react": "^17.0.2",
+    "react-beautiful-dnd": "^13.1.0",
+    "react-bootstrap": "^2.1.2",
+    "react-dnd": "^15.1.1",
     "react-dom": "^17.0.2",
+    "react-draggable": "^4.4.4",
+    "react-icons": "^4.3.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "5.0.0",
     "styled": "^1.0.0",
