--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-beautiful-dnd": "^13.1.0",
     "react-bootstrap": "^2.1.2",
     "react-dnd": "^15.1.1",
+    "react-dnd-html5-backend": "^15.1.2",
     "react-dom": "^17.0.2",
     "react-draggable": "^4.4.4",
     "react-icons": "^4.3.1",
