--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "bootstrap": "^5.1.3",
     "components": "^0.1.0",
     "react": "^17.0.2",
-    "react-beautiful-dnd": "^13.1.0",
+    "react-beautiful-dnd": "^12.2.0-alpha.1",
     "react-bootstrap": "^2.1.2",
     "react-dnd": "^15.1.1",
     "react-dnd-html5-backend": "^15.1.2",
@@ -23,7 +23,7 @@
     "react-draggable": "^4.4.4",
     "react-icons": "^4.3.1",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "5.0.0",
+    "react-scripts": "^3.0.1",
     "styled": "^1.0.0",
     "styled-components": "^5.3.3",
     "web-vitals": "^2.1.2"
