--- a/package.json
+++ b/package.json
@@ -4,10 +4,11 @@
   "private": true,
   "dependencies": {
     "-": "0.0.1",
-    "@emotion/react": "^11.7.1",
-    "@emotion/styled": "^11.6.0",
+    "@emotion/react": "^11.8.1",
+    "@emotion/styled": "^11.8.1",
     "@material-ui/core": "^4.12.3",
-    "@mui/material": "^5.4.1",
+    "@material-ui/pickers": "^3.3.10",
+    "@mui/material": "^5.4.3",
     "@mui/styled-engine-sc": "^5.4.1",
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
@@ -17,6 +18,7 @@
     "react": "^17.0.2",
     "react-beautiful-dnd": "^12.2.0-alpha.1",
     "react-bootstrap": "^2.1.2",
+    "react-datepicker": "^4.6.0",
     "react-dnd": "^15.1.1",
     "react-dnd-html5-backend": "^15.1.2",
     "react-dom": "^17.0.2",
