--- a/package.json
+++ b/package.json
@@ -15,7 +15,10 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.26.0",
     "bootstrap": "^5.1.3",
+    "bootstrap-4-react": "0.0.59",
+    "cdbreact": "^1.3.1",
     "components": "^0.1.0",
+    "mdb-ui-kit": "^3.10.2",
     "react": "^17.0.2",
     "react-beautiful-dnd": "^12.2.0-alpha.1",
     "react-bootstrap": "^2.1.2",
