--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-scripts": "^3.0.1",
     "styled": "^1.0.0",
     "styled-components": "^5.3.3",
+    "sweetalert2": "^11.4.4",
     "web-vitals": "^2.1.2"
   },
   "scripts": {
