--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "-": "0.0.1",
     "@emotion/react": "^11.8.1",
     "@emotion/styled": "^11.8.1",
+    "@lourenci/react-kanban": "^2.1.0",
     "@material-ui/core": "^4.12.3",
     "@material-ui/pickers": "^3.3.10",
     "@mui/material": "^5.4.3",
@@ -29,7 +30,7 @@
     "react-draggable": "^4.4.4",
     "react-icons": "^4.3.1",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "^3.0.1",
+    "react-scripts": "^2.1.8",
     "styled": "^1.0.0",
     "styled-components": "^5.3.3",
     "sweetalert2": "^11.4.4",
