--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "bootstrap-4-react": "0.0.59",
     "cdbreact": "^1.3.1",
     "components": "^0.1.0",
-    "mdb-ui-kit": "^3.10.2",
+    "mdb-ui-kit": "^3.11.0",
+    "mdbreact": "^5.2.0",
     "react": "^17.0.2",
     "react-beautiful-dnd": "^12.2.0-alpha.1",
     "react-bootstrap": "^2.1.2",
@@ -31,9 +32,10 @@
     "react-icons": "^4.3.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^2.1.8",
+    "react-use-navigate": "^0.1.1",
     "styled": "^1.0.0",
     "styled-components": "^5.3.3",
-    "sweetalert2": "^11.4.4",
+    "sweetalert2": "^11.4.6",
     "web-vitals": "^2.1.2"
   },
   "scripts": {
