--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-icons": "^4.3.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^2.1.8",
+    "react-switch": "^7.0.0",
     "react-trello": "^2.2.11",
     "react-use-navigate": "^0.1.1",
     "styled": "^1.0.0",
